--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,28 +1,15 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-html {
-  box-sizing: border-box;
-  /* font-size: 62.5%; */
-}
-
 body {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  line-height: 1.6;
-  min-height: 100vh;
+  font-family: "Open Sans Condensed";
+  padding: 20px 60px
 }
 
 
 a {
   text-decoration: none;
   color: #000
+}
+
+
+* {
+  box-sizing: border-box;
 }
